# maloader

./: .gitignore  CMakeLists.txt  Makefile  README  fat.cc  fat.h  ld-mac.cc  log.cc  mach-o.cc  mach-o.h  rename.tab
include/mach-o/: fat.h  loader.h
libmac/: CMakeLists.txt  libintl.c  mac.c  mem.c  pwd.c
